[package]
name = "graph-ui"
version = "0.1.0"
edition = "2021"
description = "Obsidian vault graph visualization — Bevy + egui frontend"

[[bin]]
name = "graph-ui"
path = "src/main.rs"

[lib]
name = "graph_ui"
path = "src/lib.rs"

[dependencies]
fuzzy-matcher = "0.3"
vault-data    = { path = "../vault-data" }
vault-links   = { path = "../vault-links" }
graph-metrics = { path = "../graph-metrics" }
graph-layouts = { path = "../graph-layouts" }

bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "x11",
    "wayland",
    "tonemapping_luts",
    "bevy_log",
] }
bevy_egui = "0.34"
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tvix-wasm  = { path = "../tvix-wasm" }
