[package]
name        = "jump-io"
version.workspace    = true
edition.workspace    = true
description = "Platform-agnostic input layer: semantic actions, rebindable triggers, per-device sensitivity. Private to the jump-cannon workspace."
publish     = false

[dependencies]
egui  = { version = "0.30", features = ["serde"] }
serde = { workspace = true }
