[package]
name = "tvix-loader"
version = "1.0.0"
edition = "2021"
description = "tvix adapter: evaluates Nix graph expressions and converts GeneratedGraph → VaultGraph"

[dependencies]
vault-data  = { path = "../vault-data" }
data-loader = { path = "../data-loader" }
tvix-wasm   = { path = "../tvix-wasm", default-features = false }
serde       = { workspace = true }
serde_json  = { workspace = true }
rand        = { workspace = true }
tracing     = "0.1"

[dev-dependencies]
tempfile = "3"