[package]
name = "tvix-wasm"
version = "1.0.0"
edition = "2021"
description = "tvix-eval bridge — native + WASM Nix graph-expression evaluator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]

# Concrete versions, NOT `workspace = true`: app/ui consumes this crate as a
# path dependency from the app workspace's nix build, where the repo-root
# workspace manifest is outside the source fileset (same rule graph-layouts
# follows). Keep these in sync with [workspace.dependencies] at the root.
[dependencies]
wasm-bindgen           = { version = "0.2", optional = true }
js-sys                 = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"

# tvix-eval is an UNCONDITIONAL dependency. default-features=false drops the
# impure / arbitrary / nix_tests features, making evaluation pure by
# construction and letting the crate compile for wasm32-unknown-unknown.
[dependencies.tvix-eval]
git = "https://github.com/tvlfyi/tvix"
rev = "1dbdd85ab1acdc0c28641f6dfdf8b88d9eda89ed"
default-features = false
