[package]
name = "vault-search"
version = "0.1.0"
edition = "2021"
description = "HTTP full-text search backend for an Obsidian vault (Tantivy-backed)"
license = "MIT"
publish = false

[[bin]]
name = "vault-search"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tantivy = "0.22"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
anyhow = "1"
thiserror = "1"
urlencoding = "2"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
